[package]
name = "indexset"
version = "0.5.0"
edition = "2021"
documentation = "https://docs.rs/indexset/"
repository = "https://github.com/brurucy/indexset"
license = "Apache-2.0 OR MIT"
description = "A two-level BTree with fast iteration and indexing operations"
keywords = ["btreemap", "btreeset", "set", "map", "order-statistic"]
categories = ["data-structures"]
readme = "README.md"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
rand = "0.8.5"

[dependencies]
serde = { version = "1.0.151", optional = true, features = ["derive"] }
ftree = { version = "1.1.0", features = ["serde"] }
arc-swap = { version = "1.7.1" }
parking_lot = { version = "0.12.3", features = ["send_guard", "arc_lock"] }
crossbeam-utils = { version = "0.8.20" }
crossbeam-skiplist = { version = "0.1.3" }
scc = { version = "2.2.5" }

[features]
serde = ["dep:serde"]

[[bench]]
name = "stdlib"
harness = false

[[bench]]
name = "concurrent"
harness = false